--- a/social-slide.css
+++ b/social-slide.css
@@ -1,9 +1,13 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
-body{padding:3em 2em;font-family:'Open Sans',Arial,sans-serif;font-size:1em;line-height:1;background:#333333;}
+body{padding:3em 2em;font-family: 'Ubuntu', sans-serif;font-size:1em;line-height:1;background:#333333;color:#fff;text-align: center;}
 .credit{display:block;max-width:400px;text-align:center;padding:0;font-size:0.8em;color:#888888;text-shadow:0 1px 0 rgba(0, 0, 0, 0.9);}.credit p a,.credit a{color:white;text-decoration:none;font-weight:700;}.credit p a:hover,.credit a:hover,.credit p a:active,.credit a:active{text-shadow:0 0 5px rgba(255, 255, 255, 0.4);color:white;}
 .credit p a.button,.credit a.button{padding:6px 12px;margin-top:10px;background:#1a1a1a;border-radius:3px;}.credit p a.button:hover,.credit a.button:hover{background:#4d4d4d;}
 .credit p:last-of-type{margin-bottom:30px;}
 section{max-width:175px;margin:0 auto;display:block;padding:2em;width:100%;}
+
+logo{font-size: 4em;}
+#container{width:50%;margin:0 auto;}
+
 span{position:absolute;top:7px;left:16px;text-align:center;-webkit-transition:all 0.3s ease-in-out;-moz-transition:all 0.3s ease-in-out;-ms-transition:all 0.3s ease-in-out;-o-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;display:block;}span.fb-inner{background:no-repeat url('sprite.png') -41px 0;width:40px;height:40px;}
 span.tw-inner{background:no-repeat url('sprite.png') 0 0;width:40px;height:40px;}
 .social-share{width:72px;height:54px;display:inline-block;position:relative;overflow:hidden;border-radius:6px;}.social-share:first-of-type{margin-right:10px;}
